GNOME Bugzilla – Bug 680067
Credits in About dialog don't support https
Last modified: 2014-08-29 04:52:18 UTC
I noticed, while playing with Glade3, that strings such as http://example.com ...get transformed as links in the credits, however strings like: https://example.com ...stay in plaintext. I also noticed that if I put something like - http://example.com It would show up as a "-" string with a hyperlink (not sure if that one is a feature).