GtkAboutDialog: Support https in links

https://bugzilla.gnome.org/show_bug.cgi?id=680067